ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speakbuddy-ingress
  namespace: speakbuddybe-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: speakbuddy.local   # Change this to your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speakbuddybeapi
            port:
              number: 8081
